avatar fix to vertical align middle

--- a/app/assets/stylesheets/lobbies.scss
+++ b/app/assets/stylesheets/lobbies.scss
@@ -129,6 +129,7 @@ h1 a{
 
 .avatar-img {
   margin-right: 10px;
+  vertical-align: middle;
 }
 
 .input-container {
